# hedera-sdk-rust-archived

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  include  libs  rust-toolchain  rustfmt.toml  x.py
.cargo/: config
examples/: append_file.rs  call_hello_world_contract.rs  create_account.rs  create_contract.rs  create_file.rs  create_file_from_file.rs  crypto_create.rs  generate_key.rs  generate_keys.rs  get_account.rs  get_account_balance.rs  transfer_crypto.rs  update_account.rs
examples/files/: Hedera.txt
hedera-sdk-go/: README.md  account-id.go  client.go  go.mod  key.go  package.go  query-get-account-balance.go  query-get-transaction-receipt.go  timestamp.go  transaction-create-account.go  transaction-crypto-transfer.go  transaction-id.go  transaction.go
hedera-sdk-go/examples/: create-account.go  crypto-transfer.go  generate-keys.go  get-account-balance.go
hedera-sdk-go/include/: hedera-account-id.h  hedera-client.h  hedera-key.h  hedera-query-get-account-balance.h  hedera-transaction-id.h  hedera-transaction.h
hedera-sdk-rust/: Cargo.toml  build.rs
hedera-sdk-rust/src/: client.rs  id.rs  key.rs  lib.rs  query.rs  timestamp.rs  transaction.rs  transaction_id.rs
hedera-sdk-rust/src/bridge/: account_id.rs  client.rs  mod.rs  query.rs  timestamp.rs  transaction.rs  transaction_id.rs
hedera-sdk-rust/src/bridge/include/: hedera-query-get-transaction-receipt.h  hedera-query.h  hedera-timestamp.h  hedera-transaction-create-account.h  hedera-transaction-crypto-transfer.h
proto/: AdminUndelete.proto  BasicTypes.proto  ConsensusGetTopicInfo.proto  ContractGetInfo.proto  CryptoCreate.proto  CryptoGetAccountBalance.proto  CryptoGetInfo.proto  CryptoService.proto  FileCreate.proto  FileService.proto  FileUpdate.proto  Query.proto  Response.proto  ResponseCode.proto  ResponseHeader.proto  SmartContractService.proto  Transaction.proto  TransactionBody.proto  TransactionReceipt.proto  TransactionResponse.proto
proto-legacy/: BasicTypes.proto
src/: argument.rs  call_param_utils.rs  call_params.rs  claim.rs  client.rs  crypto.rs  duration.rs  entity.rs  error.rs  function_result.rs  function_selector.rs  id.rs  info.rs  key.rs  lib.rs  macros.rs  proto.rs  query.rs  query_contract_get_bytecode.rs  query_contract_get_info.rs  query_contract_get_records.rs  query_crypto_get_account_balance.rs  query_crypto_get_account_records.rs  query_crypto_get_claim.rs  query_crypto_get_info.rs  query_file_get_contents.rs  query_get_account_balance.rs  query_get_account_info.rs  query_get_by_key.rs  query_get_transaction_receipt.rs  query_transaction_get_record.rs  response.rs  solidity_util.rs  status.rs  timestamp.rs  transaction.rs  transaction_admin_delete.rs  transaction_admin_recover.rs  transaction_contract_call.rs  transaction_contract_create.rs  (+16 more)
src-legacy/: claim.rs  client.rs  crypto.rs  duration.rs  id.rs  lib.rs  proto.rs  query.rs  transaction.rs  transaction_id.rs  transaction_receipt.rs  transaction_record.rs
src-legacy/query/: query_contract_get_bytecode.rs  query_crypto_get_account_balance.rs  query_crypto_get_info.rs  query_file_get_contents.rs
src-legacy/transaction/: transaction_admin_delete.rs  transaction_admin_recover.rs  transaction_contract_call.rs  transaction_contract_create.rs  transaction_contract_update.rs  transaction_crypto_add_claim.rs  transaction_crypto_create.rs  transaction_crypto_delete.rs  transaction_crypto_delete_claim.rs  transaction_crypto_transfer.rs  transaction_crypto_update.rs  transaction_file_append.rs  transaction_file_create.rs  transaction_file_delete.rs  transaction_file_update.rs
src/bridge/: account_id.rs  client.rs  error.rs  key.rs  macros.rs  mod.rs  query.rs  timestamp.rs  transaction.rs  transaction_id.rs
src/bridge/c/: transaction_id.rs
src/query/: mod.rs  query.rs  query_contract_call.rs  query_contract_get_bytecode.rs  query_contract_get_info.rs  query_contract_get_records.rs  query_crypto_get_account_balance.rs  query_crypto_get_account_records.rs  query_crypto_get_claim.rs  query_crypto_get_info.rs  query_file_get_contents.rs  query_file_get_info.rs  query_get_by_key.rs  query_get_transaction_receipt.rs  query_transaction_get_receipt.rs  query_transaction_get_record.rs
src/transaction/: mod.rs  transaction.rs  transaction_admin_delete.rs  transaction_admin_recover.rs  transaction_contract_call.rs  transaction_contract_create.rs  transaction_contract_delete.rs  transaction_contract_update.rs  transaction_crypto_add_claim.rs  transaction_crypto_create.rs  transaction_crypto_delete.rs  transaction_crypto_delete_claim.rs  transaction_crypto_transfer.rs  transaction_crypto_update.rs  transaction_file_append.rs  transaction_file_create.rs  transaction_file_delete.rs  transaction_file_update.rs  transaction_id.rs  transaction_receipt.rs  transaction_record.rs
(+10 files in other folders)
