[package]
name = "hedera"
version = "0.4.2-alpha.0"
description = "Hedera SDK for Rust"
license = "Apache-2.0"
repository = "https://github.com/launchbadge/hedera-sdk-rust"
edition = "2018"
keywords = ["hedera", "sdk", "rust"]
authors = [
    "LaunchBadge <contact@launchbadge.com>",
    "Lonestar Data Technologies <sam@lonestardata.io>"
]

[dependencies]
ed25519-dalek = { version = "1.0.0-pre.1", default-features = false, features = [ "std", "nightly", "u64_backend" ] }
rand_core = "0.4.0"
sha2 = "0.8.0"
sha3 = "0.8.2"
hex = "0.3.2"
hmac = "0.7.0"
failure = "0.1.5"
simple_asn1 = "0.4.0"
failure_derive = "0.1.5"
once_cell = { version = "1.0.2", features = [ "parking_lot" ] }
num = "0.2.0"
protobuf = "2.8.1"
itertools = "0.8.0"
chrono = "0.4.9"
parking_lot = "0.9.0"
pbkdf2 = { version = "0.3.0", default-features = false }
getrandom = "0.1.12"
grpc = "0.6.1"
query_interface = "0.3.5"
httpbis = "0.7.0"
log = "0.4.8"
try_from = "0.3.2"
tiny-bip39 = { version="0.6.2", default-features = false }
tokio = { version = "0.2.0-alpha.4" }
futures = { version = "0.3.0-alpha.18", package = "futures-preview", features = [ "compat" ] }

[build-dependencies]
protoc-rust-grpc = "0.6.1"
glob = "0.3.0"

[profile.dev]
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
debug-assertions = true

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
incremental = false

[dev-dependencies]
pretty_env_logger = "0.3.1"
