[package]
name = "hedera"
version = "0.1.0"
edition = "2018"
authors = [
    "Ryan Leckey <ryan@launchbadge.com>"
]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
ed25519-dalek = { version = "0.8.1", features = [ "nightly" ] }
rand = "0.5.5"
# NOTE: Blocked on updating this by https://github.com/dalek-cryptography/ed25519-dalek/issues/46
sha2 = "0.7"
hex = "0.3.2"
failure = "0.1.3"
simple_asn1 = "0.1.0"
failure_derive = "0.1.3"
once_cell = { version = "0.1.6", features = [ "parking_lot" ] }
num = "0.2.0"
# NOTE: This must be synced with the version in [grpcio]
protobuf = "~2.0"
libc = "0.2.43"
mbox = "0.5.0"
itertools = "0.7"
grpcio = "0.4.0"
futures = "0.1"
chrono = "0.4.6"

[build-dependencies]
protoc-grpcio = "0.3.0"
glob = "0.2.11"
